--- a/starter-code/french-onion-soup-starter-code/index.html
+++ b/starter-code/french-onion-soup-starter-code/index.html
@@ -10,58 +10,54 @@
 
 <body>
 
-  <div id="soup image">
-    <img src="images/soup.jpg" id="soupImage">
-  </div>
-
-  <div id="header">
+  <div class="header">
     <h1> French Onion Soup </h1>
   </div>
 
-<div id="textbody">
+  <div class="textbody">
 
-  <div id="intro">
-    <p> We have been trying French onion soup in restaurants for years and my family
-and friends agree none can compare to my recipe for taste and simplicity of
-preparation. </p>
-    <img src="images/recipe-info.png" left=100px style="padding-left: 130px">
+    <div class="intro">
+      <p> We have been trying French onion soup in restaurants for years and my family
+  and friends agree none can compare to my recipe for taste and simplicity of
+  preparation. </p>
+      <img src="images/recipe-info.png">
+    </div>
+
+    <div class="ingredients">
+      <h2> Ingredients </h2>
+      <ul>
+        <li> 1/2 cup unsalted butter </li>
+        <li> tablespoons olive oil </li>
+        <li> cups sliced onions </li>
+        <li> (10.5 ounce) cans beef broth </li>
+        <li> tablespoons dry sherry (optional) </li>
+        <li> teaspoon dried thyme </li>
+        <li> and pepper to taste </li>
+        <li> slices French bread </li>
+        <li> slices provolone cheese </li>
+        <li> slices Swiss cheese, diced </li>
+        <li> 1/4 cup grated Parmesan cheese </li>
+      <ul>
+
+      <img src="images/cooking-info.png">
+    </div>
+
+    <div class="directions">
+      <h2> Directions </h2>
+      <ol>
+        <li> Melt butter with olive oil in an 8 quart stock pot on medium heat. Add onions and
+  continually stir until tender and translucent. Do not brown the onions. </li>
+        <li> Add beef broth, sherry and thyme. Season with salt and pepper, and simmer for 30
+  minutes. </li>
+        <li> Heat the oven broiler. </li>
+        <li> Ladle soup into oven safe serving bowls and place one slice of bread on top of each
+  (bread may be broken into pieces if you prefer). Layer each slice of bread with a slice of
+  provolone, 1/2 slice diced Swiss and 1 tablespoon Parmesan cheese. Place bowls on
+  cookie sheet and broil in the preheated oven until cheese bubbles and browns slightly. </li>
+      </ol>
+    </div>
+
   </div>
-
-  <div id="ingredients">
-    <h2> Ingredients </h2>
-    <ul>
-      <li> 1/2 cup unsalted butter </li>
-      <li> tablespoons olive oil </li>
-      <li> cups sliced onions </li>
-      <li> (10.5 ounce) cans beef broth </li>
-      <li> tablespoons dry sherry (optional) </li>
-      <li> teaspoon dried thyme </li>
-      <li> and pepper to taste </li>
-      <li> slices French bread </li>
-      <li> slices provolone cheese </li>
-      <li> slices Swiss cheese, diced </li>
-      <li> 1/4 cup grated Parmesan cheese </li>
-    <ul>
-
-    <img src="images/cooking-info.png" left=100px style="padding-left: 130px">
-  </div>
-
-  <div id="directions">
-    <h2> Directions </h2>
-    <ol>
-      <li> Melt butter with olive oil in an 8 quart stock pot on medium heat. Add onions and
-continually stir until tender and translucent. Do not brown the onions. </li>
-      <li> Add beef broth, sherry and thyme. Season with salt and pepper, and simmer for 30
-minutes. </li>
-      <li> Heat the oven broiler. </li>
-      <li> Ladle soup into oven safe serving bowls and place one slice of bread on top of each
-(bread may be broken into pieces if you prefer). Layer each slice of bread with a slice of
-provolone, 1/2 slice diced Swiss and 1 tablespoon Parmesan cheese. Place bowls on
-cookie sheet and broil in the preheated oven until cheese bubbles and browns slightly. </li>
-    </ol>
-  </div>
-
-</div>
 
 </body>
 
